# event-booking-system

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/wrapper/: gradle-wrapper.properties
apps/accounts/: forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/bookings/: forms.py  models.py  services.py  urls.py  views.py
apps/bookings/migrations/: 0001_initial.py
apps/dashboard/: urls.py  views.py
apps/events/: apps.py  forms.py  models.py  services.py  similarity.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py
apps/pages/: urls.py  views.py
config/: settings.py  urls.py
diagrams/: graph.dot  old.md
nginx/: nginx.conf
scripts/: lint_and_format.sh
src/: main.rs
static/: humans.txt  robots.txt  security.txt
static/assets/css/: about.css  contact.css  dashboard.css  default.css  dpa.css  event.css  explore.css  header.css  new.css  privacy.css  profile.css  settings.css  (+2 more)
static/css/: components.css  dashboard.css  dashboard2.css  default.css  event.css  footer.css  header.css  index.css  pages.css  profile.css  settings.css
static/js/: event-modal.js  login_validation.js  new-event-validation.js  signup_validation.js
templates/: base.html
templates/bookings/: checkout.html
templates/components/: footer.html  header.html  header.php
templates/dashboard/: base.html  bookings.html  home.html  moderation.html  posts.html  sales.html
templates/events/: create.html  delete.html  detail.html  explore.html  update.html
templates/pages/: about.html  about.php  contact.html  dpa.html  home.html  privacy.html  privacy.php  terms.html
templates/registration/: login.html  logout.php  signup.html  signup.php
templates/routes/: dashboard.html  dashboard.php  event.html  explore.php  login.php  new.html  validate.php
templates/user/: profile.html  settings.html
(+9 files in other folders)
