[project]
name = "chautari"
version = "0.1.0"
description = "Event booking platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=5.1",
    "django-cors-headers>=4.3",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "whitenoise>=6.0",
    "requests>=2.32.5",
    "django-environ>=0.11",
    "boto3>=1.35",
    "django-storages>=1.14",
    "django-extensions>=4.1",
    "pillow>=12.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "numpy>=2.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "factory-boy>=3.3",
    "pytest-cov>=4.1",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]
