[project]
name = "chautari"
version = "0.1.0"
description = "Event booking platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.14",
    "Django>=5.1",
    "django-cors-headers>=4.3",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-storages>=1.14.6",
    # "django-dotenv",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]
